--- a/html basic.html
+++ b/html basic.html
@@ -1,7 +1,45 @@
 <html>
+    <hea>
+        <title>
+            Food Website Design - Easy tutorials
+        </title>
+        <meta name = "viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    </head>
     <body>
-        <p>
-            Bhupinder Singh
-        </p>
+        <div class="hero">
+        <div class="nav-bar">
+            <div class="nav-logo">
+                <img src="shopping-cart.png" style="height: 90px; width: 90px;">
+            </div>
+            
+                <div class="nav-links">
+                    <ul>
+                        <a href="#"><li>HOME</li></a>
+                        <a href="#"><li>ABOUT</li></a>
+                        <a href="#"><li>RECIPE</li></a>
+                    </ul>
+                    <button type="button"class="button">SIGN UP</button>
+                </div>
+
+            </div>
+            <div class="banner">
+                <h1>Dog <span>Food<br> Cat</span> Food</h1>
+                
+                <button type="button" class="button">EXPLORE</button>
+            </div>
+            <div class="vertical-bar">
+                <div class="search-icon">
+                    <i class="fa fa-th-list"></i>
+                    <i class="fa fa-search"></i>
+                </div>
+                <div class="social-icons">
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-linkedin"></i>
+                    <i class="fa fa-twitter"></i>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
