--- a/html basic.html
+++ b/html basic.html
@@ -40,6 +40,15 @@
                     <i class="fa fa-twitter"></i>
                 </div>
             </div>
+            <div class="notifications">
+                <div class="contents">
+                    <small>Every type of Dog and Cat Food are available </small>
+                    <p><a href=""><br>PREV</a><a href="">NEXT</a></p>
+                </div>
+                <div class="notification-img">
+                    <img src="food.jpg">
+                </div>
+            </div>
         </div>
     </body>
 </html>
