--- a/html basic.html
+++ b/html basic.html
@@ -1,5 +1,5 @@
 <html>
-    <hea>
+    <head>
         <title>
             Food Website Design - Easy tutorials
         </title>
@@ -35,9 +35,10 @@
                     <i class="fa fa-search"></i>
                 </div>
                 <div class="social-icons">
-                    <i class="fa fa-instagram"></i>
-                    <i class="fa fa-linkedin"></i>
-                    <i class="fa fa-twitter"></i>
+                    <img src="instagram.png"  style="height: 30px; width: 30px;"">
+                    <img src="linkedin.png"  style="height: 30px; width: 30px;"">
+                    <img src="twitter.png" style="height: 30px; width: 30px;"">
+                    
                 </div>
             </div>
             <div class="notifications">
@@ -48,6 +49,9 @@
                 <div class="notification-img">
                     <img src="food.jpg">
                 </div>
+            </div>
+            <div class="image">
+                <img src="back2.PNG" style="margin-top: 450px; width: 1600px; height: 800px; " >
             </div>
         </div>
     </body>
